# xsim

xsim/: ChangeLog  KNOWNBUG  Makefile.in  README  README.cn  TODO  configure  configure.in  mkinstalldirs  version.h
xsim/etc/: Makefile.in  xsimrc.in
xsim/plugins/: Makefile.in
xsim/plugins/IMs/: Makefile.in
xsim/plugins/IMs/jianpin/: Makefile.in  b2q.h.mb  pyphraser.cpp  pyphraser.h  simpleim.cpp  simpleim.h  simpleimc.cpp  simpleimc.h
xsim/plugins/IMs/jianpin/dict/: Makefile.in  char2db.cpp  chtest.cpp  wdtest.cpp  word2db.cpp
xsim/plugins/IMs/jianpin/dict/chars/: py_utf8-1.0.4.txt
xsim/plugins/IMs/jianpin/dict/freq/: sort.char.count
xsim/plugins/IMs/jianpin/dict/gb2312/: PY.cin
xsim/plugins/IMs/jianpin/dict/gbk/: gbkpy.freepy30
xsim/plugins/IMs/jianpin/dict/words/: sysphrase.txt
xsim/plugins/IMs/table/: Makefile.in  tableim.cpp  tableim.h  tableimc.cpp  tableimc.h
xsim/plugins/IMs/table/dict/: Makefile.in  wdtest.cpp  word2db.cpp
xsim/plugins/IMs/wubi/: Makefile.in  b2q.h  wubiim.cpp  wubiim.h  wubiimc.cpp  wubiimc.h
xsim/plugins/IMs/wubi/dict/: Makefile.in  wdtest.cpp  word2db.cpp
xsim/plugins/IMs/wubi/dict/words/: README  cjkvinput-wubi-table.txt
xsim/plugins/Panels/: Makefile.in
xsim/plugins/Panels/std/: Makefile.in  panel_std.cpp  panel_std.h
xsim/plugins/StatusPanels/: Makefile.in
xsim/plugins/StatusPanels/kde2/: Makefile.in  statuspanel_kde2.cpp  statuspanel_kde2.h
xsim/plugins/StatusPanels/kde3/: Makefile  Makefile.in  statuspanel_kde3.cpp  statuspanel_kde3.h
xsim/plugins/StatusPanels/std/: Makefile.in  statuspanel_std.cpp  statuspanel_std.h
xsim/xsim/: .conf.cpp.swp  Makefile.in  conf.cpp  conf.h  ic.cpp  ic.h  icman.cpp  icman.h  im.cpp  im.h  imc.h  main.cpp  panel.cpp  panel.h  statuspanel.cpp  statuspanel.h  win.cpp  win.h  wstring.cpp  wstring.h  xim.cpp  xim.h
xsim/xsim/IMdkit/: Makefile.in
